<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     android:background="@drawable/pumps" >


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="16dp"
        android:text="@string/success1"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <Button
        android:id="@+id/yes"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_x="57dp"
        android:layout_y="341dp"
        android:text="@string/yes" />


    <Button
        android:id="@+id/no"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_x="179dp"
        android:layout_y="338dp"
        android:text="@string/no" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="33dp"
        android:layout_y="284dp"
        android:text="@string/succeed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</AbsoluteLayout>