<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
     android:background="@drawable/pumps">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="4dp"
        android:layout_y="88dp"
        android:text="@string/petrol_q" />

    <EditText
        android:id="@+id/av"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_x="112dp"
        android:layout_y="73dp"
        android:ems="10"
        android:inputType="numberDecimal" />


    <EditText
        android:id="@+id/veh"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_x="104dp"
        android:layout_y="7dp"
        android:ems="10" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="22dp"
        android:text="@string/veh_name" />


    <Button
        android:id="@+id/b1"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_x="87dp"
        android:layout_y="265dp"
        android:text="@string/add" />

</AbsoluteLayout>